# Tight-Inclusion

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TightInclusionOptions.cmake.sample
.github/workflows/: continuous.yml
app/: CMakeLists.txt  config.hpp.in  main.cpp  read_rational_csv.cpp  read_rational_csv.hpp
cmake/: TI_CCDDependencies.cmake  TI_CCDDownloadExternal.cmake  TI_CCDUtils.cmake  Warnings.cmake
cmake/find/: FindAVX.cmake
cmake/recipes/: ccd_query_io.cmake  cli11.cmake  eigen.cmake  pbar.cmake  sample_queries.cmake
cmake/tight_inclusion/: tight_inclusion_filter_flags.cmake  tight_inclusion_use_colors.cmake  tight_inclusion_utils.cmake  tight_inclusion_warnings.cmake
data/erleben-cube-cliff-edges/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-cube-cliff-edges/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-cube-internal-edges/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-cube-internal-edges/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-sliding-spike/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-sliding-spike/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-sliding-wedge/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-sliding-wedge/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-spike-crack/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-spike-crack/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-spike-hole/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-spike-hole/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-spike-wedge/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-spike-wedge/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-spikes/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-spikes/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-wedge-crack/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-wedge-crack/vertex-face/: data_0_0.csv  data_0_1.csv
data/erleben-wedges/edge-edge/: data_0_0.csv  data_0_1.csv
data/erleben-wedges/vertex-face/: data_0_0.csv  data_0_1.csv
src/: main.cpp
src/tight_inclusion/: CMakeLists.txt  avx.cpp  avx.hpp  ccd.cpp  ccd.hpp  config.hpp.in  interval.cpp  interval.hpp  interval_root_finder.cpp  interval_root_finder.hpp  logger.cpp  logger.hpp  timer.hpp  types.hpp
src/tight_inclusion/rational/: CMakeLists.txt  ccd.cpp  ccd.hpp  interval_root_finder.cpp  interval_root_finder.hpp  rational.cpp  rational.hpp
tight_inclusion/: CMakeLists.txt  Rational.hpp  Timer.hpp  Types.hpp  avx  avx.cpp  avx.h  avx.hpp  ccd.cpp  ccd.hpp  eigen_ext.hpp  igl-Timer.h  inclusion_ccd.cpp  inclusion_ccd.hpp  interval.cpp  interval.hpp  interval_ccd.cpp  interval_ccd.hpp  interval_root_finder.cpp  interval_root_finder.hpp
tight_inclusion/rational/: CMakeLists.txt  ccd.cpp  interval_root_finder.cpp  interval_root_finder.hpp  rational.hpp
